--- a/classes/pound/main.css
+++ b/classes/pound/main.css
@@ -77,14 +77,31 @@ body {
 	width: 768px;
 	height: 300px;
 	background-color: #34344F;
-	background-image: url(images/logo2.svg);
-	background-size: 200px auto;
+	background-image: url(images/meatcycle.gif);
+	background-size: 100% auto;
 	background-position: center center;
 	background-repeat: no-repeat;
 	position: absolute;
 	bottom: 0px;
 	left: 0;
+	text-align: center;
 }
+
+
+
+.dull {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(236, 52, 91, 0.8);
+	position: absolute;
+}
+
+.dull img {
+	width: 200px;
+	height: auto;
+	margin-top: 110px;
+}
+
 
 /* ———————————————— Menu System —————————————— */
 
@@ -567,11 +584,11 @@ body {
 	top: 2245px;
 	left: 558px;
 	height: 190px;
-	background-image: url(images/happycow1.png);
+	background-image: url(images/bacon.gif);
 	background-repeat: no-repeat;
 	padding-bottom: 20px;
 	padding-right: 15px;
-	background-size: 120% auto;
+	background-size: 140% auto;
 	-webkit-box-sizing:border-box;
 	border-bottom: 4px #000 solid;
 }
@@ -598,6 +615,7 @@ body {
 	background-image: url(images/zoom.svg);
 	background-size: 100% 100%;
 }
+
 
 
 
