--- a/classes/pound/main.css
+++ b/classes/pound/main.css
@@ -87,6 +87,20 @@ body {
 	text-align: center;
 }
 
+.closerBox2 {
+	width: 768px;
+	height: 300px;
+	background-color: #34344F;
+	background-image: url(images/bacon.gif);
+	background-size: 100% auto;
+	background-position: center center;
+	background-repeat: no-repeat;
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+	text-align: center;
+}
+
 
 
 .dull {
@@ -96,7 +110,20 @@ body {
 	position: absolute;
 }
 
+.dull2 {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(52, 52, 79, 0.9);
+	position: absolute;
+}
+
 .dull img {
+	width: 200px;
+	height: auto;
+	margin-top: 110px;
+}
+
+.dull2 img {
 	width: 200px;
 	height: auto;
 	margin-top: 110px;
@@ -299,7 +326,7 @@ body {
 
 .homeContentsContainer {
 	width: 768px;
-	height: 2168px;
+	height: 2366px;
 	background-color: #fff;
 	position: relative;
 	overflow: hidden;
@@ -326,6 +353,7 @@ body {
 	left: 0;
 	z-index: 7;
 	pointer-events:none;
+	background-repeat: no-repeat;
 
 }
 
@@ -355,7 +383,7 @@ body {
 
 .homeContent {
 	width: 100%;
-	height: 100%;
+	height: 2050px;
 	background-image: url(images/home_content.svg);
 	background-size: 100% auto;
 	position: absolute;
@@ -363,6 +391,7 @@ body {
 	left: 0;
 	z-index: 20;
 	pointer-events:none;
+	background-repeat: no-repeat;
 }
 
 .ketchup {
