--- a/classes/pound/main.css
+++ b/classes/pound/main.css
@@ -115,6 +115,20 @@ body {
 	text-align: center;
 }
 
+.closerBox4 {
+	width: 768px;
+	height: 300px;
+	background-color: #34344F;
+	background-image: url(images/meattoss.gif);
+	background-size: 100% auto;
+	background-position: center center;
+	background-repeat: no-repeat;
+	position: absolute;
+	bottom: 0px;
+	left: 0;
+	text-align: center;
+}
+
 
 
 .dull {
@@ -675,11 +689,30 @@ body {
 }
 
 
+/* ———————————————— Depts —————————————— */
 
+.departmentContent {
+	width: 768px;
+	height: 2600px;
+	background-color: #fff;
+	background-image: url(images/dept.svg), url(images/dept2.png);
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
 
-
-
-
+.burg {
+	width: 400px;
+	height: 355px;
+	background-image: url(images/burger.gif);
+	background-position: bottom;
+	position: absolute;
+	bottom: 315px;
+	z-index: 0;
+	left: -100px;
+}
 
 
 
