--- a/clients/fw/main.css
+++ b/clients/fw/main.css
@@ -120,7 +120,7 @@ body {
 	.cursorEffector {
 		width: 100%;
 		height: 50%;
-		background-color: #fff;
+		background-color: transparent;
 		margin-left: 0;
 		margin-right: 0;
 		left: 0;
