--- a/clients/fw/fw3/main.css
+++ b/clients/fw/fw3/main.css
@@ -44,7 +44,7 @@ body {
 .logobox {
 	width: 100%;
 	height: 100%;
-	background-image: url(images/logoslow.gif);
+	background-image: url(images/logo4x.gif);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 40% auto;
