--- a/clients/zl/main.css
+++ b/clients/zl/main.css
@@ -12,7 +12,7 @@
 
 body {
 	background-size: 100% 100%;
-	background-image: url(images/p_bg.png);
+	background-image: url(images/p_bg2.png);
 	margin : 0 0 0 0;
 	background-attachment: fixed;
 }
@@ -47,15 +47,16 @@ body {
 .logobox {
 	width: 40%;
 	height: 40%;
-	background-image: url(images/zach.gif);
+	background-image: url(images/croppedzach.gif);
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-size: 40% auto;
+	background-size: 60% auto;
 	z-index: 10;
 	pointer-events:none;
 	margin-right: auto;
 	margin-left: auto;
 	padding-top: 30%;
+	min-width: 500px;
 }
 
 
@@ -80,13 +81,14 @@ body {
 
 .discography {
 	width: 100%;
-	height: 120%;
 	z-index: 100;
 	position: absolute;
 	background-image: url(images/fade.png);
+	background-position: bottom center;
 	background-size: 100% 100%;
-	margin-top: 15%;
+	margin-top: 5%;
 	padding-top: 100px;
+	padding-bottom: 7%;
 }
 
 
@@ -96,7 +98,7 @@ body {
 .discography table {
     border-collapse: collapse;
         border-spacing: 0;
-	width:60%;
+	width:70%;
 	height:90%;
 	margin-right: auto;
 	margin-left: auto;
@@ -113,6 +115,9 @@ body {
 	font-weight:normal;
 	letter-spacing: 0.1em;
 	color:#ffffff;
+	padding-top: 20px;
+	padding-bottom: 20px;
+
 }
 .discography tr:first-child td {
 	border:none;
@@ -124,9 +129,10 @@ body {
 	color:#ffffff;
 }
 
-@media only screen and (max-width: 600px) {
+/*@media only screen and (max-width: 800px) {
 	.logobox {
 		background-size: 100%;
+		margin-top: 20%;
 		
 	}
 	.cursorEffector {
@@ -143,10 +149,28 @@ body {
 		padding: 10px;
 	}
 
+}*/
+
+@media only screen and (max-width: 1300px) {
+	.logobox {
+		background-size: 80%;
+		margin-top: 10%;
+	}
+
+	.discography table
+	{
+		width: 90%;
+	}
+	.discography td {
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
 }
+
+
 @media only screen and (max-width: 900px) {
 	.logobox {
-		background-size: 100%;
+		background-size: 90%;
 		margin-top: 20%;
 	}
 
@@ -154,7 +178,25 @@ body {
 	{
 		width: 90%;
 	}
+}
 
+.xpad {
+	padding-top: 90px;
+	text-transform: uppercase;
+}
+
+.xpad a {
+	color: #fff;
+	border-bottom: 2px dotted rgba(198, 111, 239, 1);
+	text-decoration: none;
+	padding-bottom: 3px;
+	-webkit-transition: 1s border-bottom, 1s color;
+	font-size:  18px;
+}
+
+.xpad a:hover {
+	color: #fff;
+	border-bottom: 2px dotted #fff;
 }
 
 
