--- a/universe backup/main.css
+++ b/universe backup/main.css
@@ -70,8 +70,8 @@ body {
 	padding-right: 60%;
 	padding-top: 10rem;
 	-webkit-box-sizing: border-box;
-	color: #535a63;
-	font-family: "Crique";
+	color: #fff;
+	font-family: "Aaux";
 	font-size: 20px;
 	letter-spacing: 1.2px;
 	line-height: 1.2;
