--- a/universe3D/main.css
+++ b/universe3D/main.css
@@ -28,13 +28,22 @@ body {
 	padding: 0;
 	margin: 0;
 	margin-left: 0;
-	background: -webkit-linear-gradient(-76deg, #b0b8c6 0%, #dae3e8 100%) no-repeat;
+	background: transparent;
 
 
 }
 
+canvas {
+	width: 100%;
+	height: 100%;
+	position:fixed;
+	top:0; left: 0;
+	z-index: -1;
+	background-color: transparent
+}
+
 p {
-	color: #535a63;
+	color: #fff;
 	font-family: "Crique";
 	font-size: 20px;
 	letter-spacing: 1.3px;
@@ -42,7 +51,7 @@ p {
 }
 
 b {
-	color: #535a63;
+	color: #fff;
 	font-family: "Crique";
 	font-size: 20px;
 	font-weight: bold;
@@ -61,11 +70,11 @@ br {
 }
 
 a {
-	color: #535a63;
+	color: #fff;
 	text-decoration: none;
 	font-weight: bold;
 	font-family: "Crique";
-	border-bottom: 1px dotted #535a63;
+	border-bottom: 1px dotted #fff;
 	-webkit-transition: color 0.4s ease;
 }
 
@@ -78,7 +87,7 @@ ul {
 }
 
 li {
-	color: #535a63;
+	color: #fff;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	font-size: 18px;
@@ -138,7 +147,7 @@ a:hover {
 	-webkit-box-sizing: border-box;
 	margin-left: auto;
 	margin-right: auto;
-	color: #535a63;
+	color: #fff;
 	font-family: "Crique";
 	font-size: 20px;
 	letter-spacing: 1.2px;
@@ -210,12 +219,12 @@ a:hover {
 
 .foot {
 	width: 100%;
-	background-color: #23262b;
+	background-color: rgba(0, 0, 0, 0.6);
 	padding-top: 100px;
 	padding-bottom: 100px;
 	position: relative;
 	display: inline-block;
-	color: #dae3e8;
+	color: #fff;
 	font-family: "Aaux";
 	font-weight: normal;
 	font-style: italic;
